# cookiecutter-pypackage

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .ruff.toml  CONTRIBUTING.rst  README.md  README.rst  cookiecutter.json  justfile  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: autoupdate-pre-commit-config-cookiecutter.yml  autoupdate-pre-commit-config-template.yml  test.yml
docs/: conf.py  prompts.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .coveragerc  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  changelog.md  justfile  pyproject.toml  requirements_dev.txt  requirements_pinned.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/: CODEOWNERS
{{cookiecutter.project_slug}}/.github/workflows/: autoupdate-pre-commit-config.yml  test.yml
{{cookiecutter.project_slug}}/docs/: Makefile  api_docs.md  api_docs.rst  conf.py  index.md  index.rst  installation.md  installation.rst  make.bat
{{cookiecutter.project_slug}}/tests/: __init__.py  test_cli.py  test_dummy.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
