{%- set license_classifiers = {
    "MIT license": "License :: OSI Approved :: MIT License",
    "BSD license": "License :: OSI Approved :: BSD License",
    "ISC license": "License :: OSI Approved :: ISC License (ISCL)",
    "Apache Software License 2.0": "License :: OSI Approved :: Apache Software License",
    "GNU General Public License v3": "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
} %}
[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_slug }}.__version__
description = {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug_url }}
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author_email = {{ cookiecutter.email }}
{%- if cookiecutter.open_source_license in license_classifiers %}
license = {{ cookiecutter.open_source_license }}
{%- endif %}
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    {%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }}
    {%- endif %}
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = {{ cookiecutter.project_slug }}
project_urls =
    Documentation=https://{{ cookiecutter.project_slug_url }}.readthedocs.io
    Changelog=https://{{ cookiecutter.project_slug_url }}.readthedocs.io/en/latest/history.html
    Source=https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug_url }}
    Tracker=https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug_url }}/issues

[options]
packages = find:
{%- if 'no' not in cookiecutter.command_line_interface|lower %}
install_requires =
    Click>=7.0
{%- endif %}
python_requires = >=3.6.1
include_package_data = True
setup_requires =
    setuptools>=41.2
zip_safe = False

{%- if 'no' not in cookiecutter.command_line_interface|lower %}

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }}={{ cookiecutter.project_slug }}.cli:main
{%- endif %}

[options.packages.find]
include =
    {{ cookiecutter.project_slug }}
    {{ cookiecutter.project_slug }}.*
exclude =
    tests*

[darglint]
docstring_style = numpy

[pydocstyle]
convention = numpy

[aliases]
test = pytest

[rstcheck]
ignore_directives = autoattribute,autoclass,autoexception,autofunction,automethod,automodule,highlight
